Fix ckeditor placeholder overflow

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -100,6 +100,9 @@ a {
       border-color: red;
     }
   }
+  .ckeditor {
+    overflow-wrap: anywhere;
+  }
   .h5peditor-text, textarea {
     width: 100%;
     box-sizing: border-box;
